--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,24 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LearnJetPackCompose">
-        </activity>
-        <activity
-            android:name=".Lesson6_LearnJetpackCompose.SecondActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.LearnJetPackCompose">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Lesson6_LearnJetpackCompose.SecondActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.LearnJetPackCompose">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+
     </application>
 
 </manifest>
